Some minor 1.17.x fixes and adding support for lossy recipe output.